Fix alignment and style of quote-author

--- a/style.css
+++ b/style.css
@@ -116,9 +116,6 @@ a {
 
 .quote {
     background-color: #E5E7EB;
-    font-size: 36px;
-    font-weight: lighter;
-    font-style: italic;
     padding: 50px 0px;
     display: flex;
     flex-direction: column;
@@ -126,4 +123,17 @@ a {
 
 .quote p {
     margin: 0px 20%;
+    color: #1F2937;
+}
+
+.quote-author {
+    align-self: flex-end;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.quote-body {
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
 }
